tests/parse-fail/bad_generic_args2.fl
pub mod bad_generic_args2 {
    pub struct BadGenericArgs2 {
        pub a : foo[];
    }
}
